feat(auth): Add auth provider, controller and routes, add protected routes using middleware
