# internal/api/v1/modules/auth/errors.go
@@ -1,0 +1,9 @@
+package auth
+
+var (
+	ErrEmailAlreadyExists    = "User with this email already exists"
+	ErrSignupFailed          = "Failed to sign up user"
+	ErrLoginFailed           = "Failed to login"
+	ErrInvalidCredentials    = "Invalid email or password"
+	ErrTokenGenerationFailed = "Failed to generate token"
+)
